2006-05-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_render):
	Do not force ellipsis at end if ellipsis mode already set.
	N#30359

2006-05-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkhbbox.c (gtk_hbutton_box_size_allocate): Ignore the secondary
	property for hererogenous layout. Secondary buttons are treated as
	normal buttons. N#21558

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Silence compiler warnings

	* gtk/gtkwidget.c
	* gtk/gtktreemodelfilter.c
	* gtk/gtkwidget.h
	* gtk/gtktextview.c
	* gtk/gtkentry.c
	* gtk/gtktreeviewcolumn.c
	* gtk/gtkhbbox.c
	* gtk/gtkmenuitem.c
	* gtk/gtkmenu.c
	* gtk/gtkcontainer.c
	* gtk/gtkcombobox.c: Add missing includes, initialize variables,
	comment out unused code, remove unused variables, add parenthesis and
	typecasts.

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/*: Add some long lost API documentation bits. N#10197

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkwidget.c (init_tap_and_hold_animation): Always start the
	tap'n'hold animation from the beginning.

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_tap_and_hold_timeout): Use
	gtk_drag_check_threshold() instead of custom test with hardcoded pixel
	values. N#21875

2006-05-17  Tim Janik  <timj@imendio.com>

	* gtk/gtkwidget.c: reworked GtkWidgetPrivate structure into a custom
	data structure that is attached to widgets on demand. this saves a
	lot of memory since most widget's won't need GtkWidgetPrivate.
	N#24051

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkbutton.c (gtk_button_size_allocate): Do not include the
	'separator-height' area for child widget allocation as it is meant for
	extra skinning only.

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Adapted from GNOME CVS.
	
	* gtk/gtkwidget.c: Add 'scroll-arrow-hlength' and